--- a/.github/workflows/oss-dependency-scan.yml
+++ b/.github/workflows/oss-dependency-scan.yml
@@ -10,6 +10,12 @@ on:
         required: true
         type: string
 
+    secrets:
+      DOCKER_USERNAME:
+        required: true
+      DOCKER_PASSWORD:
+        required: true
+
 jobs:
   syft_grype_scan:
     runs-on: ubuntu-latest
@@ -18,6 +24,9 @@ jobs:
       - name: Set image reference
         id: prep
         run: echo "IMAGE=${{ inputs.image_name }}:${{ inputs.image_tag }}" >> $GITHUB_ENV
+
+      - name: Docker Login
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Install Syft
         run: |
